np-99994-990004-1002-prod-prod-dev.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: 99994-990004-1002-prod
  name: 99994-990004-1002-prod.prod-dev
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              namespace: 99994-990004-1001-dev
      ports:
        - protocol: TCP
          port: 1521
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              namespace: 99993-990003-1003-prod
      ports:
        - protocol: TCP
          port: 1521
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
